@@ -2,6 +2,7 @@ git-annex (8.20200331) UNRELEASED; urgency=medium
 
   * Improve git-annex's ability to find the path to its program,
     especially when it needs to run itself in another repo to upgrade it.
+  * adb: Better messages when the adb command is not installed.
 
  -- Joey Hess <id@joeyh.name>  Mon, 30 Mar 2020 15:58:34 -0400
 
